# RSE_Atlas

./: MANIFEST.in  README.md  setup.cfg
examples/: colab_example.ipynb
examples/files/: rings.smi
src/rse/: __init__.py  gnn.py  workflow.py
tests/: test_gnn.py  test_workflow.py
