[metadata]
name = RSE_Atlas
version = 0.0.1
author = 'Zhen Liu, Olexandr Isayev'
author_email = liu5@andrew.cmu.edu, olexandr@olexandrisayev.com
# description = Generating Low-energy 3D Conformers from SMILES/SDF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isayevlab/Ring_Atlas
project_urls =
    Bug Tracker = https://github.com/isayevlab/Ring_Atlas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
#...
install_requires =
    tqdm
    psutil
    Send2Trash
    pyyaml
    auto3d
    ase
    torchani

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compute_rse = rse.workflow:compute_rse_cli
    predict_rse = rse.gnn:predict_rse_cli
